fix: prevent adjacent column bleed on mobile by moving insets to column content

--- a/src/styles/_columns.scss
+++ b/src/styles/_columns.scss
@@ -262,6 +262,7 @@
     }
     .feed__item,
     .columns__header {
-        margin: 0 3px;
+        margin-inline: calc(var(--padding) + var(--safeAreaLeft))
+            calc(var(--padding) + var(--safeAreaRight));
     }
 }
